src/js/sass/footnotes.scss
@charset "utf-8";
/*
 * Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW)
 * www.tbs.gc.ca/ws-nw/wet-boew/terms / www.sct.gc.ca/ws-nw/wet-boew/conditions
 */

/*Variables*/
$ddBtmSpace: 1.5em;
$dlTopSpace: $ddBtmSpace / 3;
$dlBtmSpace: -($dlTopSpace * 2);
$dtWidth: 2.75em;
$dtRightSpace: .25em;
$dtFullSpace: $dtWidth + $dtRightSpace;
$pBtmSpace: $ddBtmSpace / 2;

/** Screen and print CSS **/
@media screen,print {
	a.footnote-link, .wet-boew-footnotes dl dd p.footnote-return a {
		background-color: #EEE;
		border: 1px solid #CCC;
		padding: 0 4px 1px;
		display: inline-block;
	}
	sup a.footnote-link, .wet-boew-footnotes dl dd p.footnote-return a {
		&:hover, &:focus, &:active {
			border-color: #666;
		}
	}
	.wet-boew-footnotes {
		margin: 2em 10px 0 10px;
		padding-top: $dlTopSpace;
		border: {
			width: 1px 0 1px 0;
			style: solid;
			color: #CCC;
		}
		h2 {
			margin: {
				left: 0;
				right: 0;
				top: 0;
			}
		}
		dl {
			display: inline-block;
			margin: 0 0 $dlBtmSpace;
			dt {
				position:absolute;
				clip:rect(1px, 1px, 1px, 1px);
				height:1px !important;
				width:1px !important;
				overflow:hidden !important;
				margin:0 !important;
				/*borrow wb-invisible's properties via SASS?*/
			}
			dd {
				position: relative;
				margin: 0 0 $ddBtmSpace;
				p {
					margin: 0 0 $pBtmSpace $dtFullSpace;
					/*manage the left and bottom spacing via SASS?*/
					&.footnote-return {
						top: -1px !important;
						left: -1px; margin: 0 !important;
						padding: 1px 0 1px 1px;
						position: absolute !important;
						width: $dtWidth;
						overflow: hidden;
						/*borrow position-top's properties via SASS?*/
					}
				}
			}
		}
	}
}

/** Print-only CSS **/
@media print {
	a.footnote-link, .wet-boew-footnotes dl dd p.footnote-return a {
		background-color: transparent;
		border: 0;
		padding: 0;
	}
	.wet-boew-footnotes {
		margin: {
			left: 0;
			right: 0;
			bottom: 1em;
		}
	}
}

